--- a/project.ipynb
+++ b/project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Basic Setup and Cleaning"
+    "## Import libraries"
    ]
   },
   {
@@ -19,6 +19,13 @@
     "import seaborn as sb\n",
     "import matplotlib.pyplot as plt # we only need pyplot\n",
     "sb.set_theme() # set the default Seaborn style for graphics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data cleaning on the raw dataset and adding an additional column for categorical variable named Popularity level"
    ]
   },
   {
@@ -133,15 +140,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Define the Popularity Levels"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since our goal is to roughly predict the popularity, we need to divide the `track_popularity` into several levels. To achieve this, let's perform some EDA and gain a general insight of this variable first."
+    "Since our goal is to predict the popularity using different variables as predictors, we need to divide the `track_popularity` into several levels. To achieve this, let's perform some EDA and gain a general insight of this variable first."
    ]
   },
   {
@@ -526,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
