add eda on response column

--- a/project.ipynb
+++ b/project.ipynb
@@ -191,14 +191,11 @@
                   "metadata": {},
                   "outputs": [],
                   "source": [
-                        "popularity_1 = pd.DataFrame(sampled_dataset[\"track_popularity\"])\n",
-                        "print(popularity_1.describe())\n",
-                        "print(popularity_1.value_counts())\n",
+                        "popularity_level = pd.DataFrame(sampled_dataset[\"popularity_level\"])\n",
+                        "print(popularity_level.describe())\n",
+                        "print(popularity_level.value_counts())\n",
                         "\n",
-                        "f, axes = plt.subplots(3, 1, figsize=(24, 12), sharex=True)\n",
-                        "sb.boxplot(data = popularity_1, orient = \"h\", ax=axes[0])\n",
-                        "sb.histplot(data = popularity_1, kde = True, ax=axes[1])\n",
-                        "sb.violinplot(data = popularity_1, orient = \"h\", ax=axes[2])"
+                        "sb.catplot(y=\"popularity_level\", data=popularity_level, kind=\"count\", height=4, aspect=3)"
                   ]
             }
       ],
@@ -218,7 +215,7 @@
                   "name": "python",
                   "nbconvert_exporter": "python",
                   "pygments_lexer": "ipython3",
-                  "version": "undefined.undefined.undefined"
+                  "version": "3.11.6"
             }
       },
       "nbformat": 4,
