--- a/project.ipynb
+++ b/project.ipynb
@@ -4,7 +4,7 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "## Import libraries"
+                        "## 1. Import libraries"
                   ]
             },
             {
@@ -25,7 +25,14 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "## Data cleaning on the raw dataset and adding an additional column for categorical variable named Popularity level"
+                        "## 2. Data cleaning"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "### Data cleaning on the raw dataset () and adding an additional column for categorical variable named Popularity level"
                   ]
             },
             {
@@ -47,7 +54,7 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "From the printed `.info()` above, we can see that some of the records in the `full_dataset` contain `NA` values in certain variables. Hence, we drop those records from `full_dataset`."
+                        "From the printed `.info()` above, we can see that some of the song records in the `full_dataset` contain `NA` values in certain variable columns. Hence, we drop those song records from `full_dataset`."
                   ]
             },
             {
@@ -148,7 +155,7 @@
                         "popularity_level[\"density\"] = popularity_level[\"count\"] / len(full_dataset)\n",
                         "popularity_level\n",
                         "\n",
-                        "# Save the cleaned dataset to a new CSV file\n",
+                        "# Save the cleaned dataset to a new CSV file named clean_dataset.csv\n",
                         "full_dataset.to_csv('datasets/cleaned_dataset.csv', index=False)"
                   ]
             },
@@ -156,7 +163,7 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "## Reduce Sample Size"
+                        "## 3. Data randomization"
                   ]
             },
             {
