--- a/project.ipynb
+++ b/project.ipynb
@@ -32,7 +32,7 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "### Data cleaning on the raw dataset () and adding an additional column for categorical variable named Popularity level"
+                        "### Data cleaning on the raw dataset (spotify_songs.csv) and extract to save it as cleaned_dataset.csv"
                   ]
             },
             {
@@ -64,7 +64,7 @@
                   "outputs": [],
                   "source": [
                         "# Apply the dropna() function to remove records with missing values\n",
-                        "# then check the information of the cleaned dataset\n",
+                        "# Then check the information of the cleaned dataset\n",
                         "full_dataset.dropna(inplace=True)\n",
                         "full_dataset.info()"
                   ]
@@ -73,7 +73,10 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "Since our goal is to predict the popularity using different variables as predictors, we need to divide the `track_popularity` into several levels. To achieve this, let's perform some EDA and gain a general insight of this variable first."
+                        "Our goal is to predict the popularity of the songs using different variables as predictors.\n",
+                        "In order to achieve this:\n",
+                        "1. Analyse the 'track_popularity' variable\n",
+                        "2. Categorize the track_popularity score into 6 different categories."
                   ]
             },
             {
@@ -97,7 +100,7 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "From the plots and `.value_counts()` above, we can see that there are unexpectedly high number of records with `track_popularity <= 1`. Let's assume this is a sort of anomaly and remove such records from our `full_dataset` to calculate a more credible mean and standard deviation."
+                        "From the plots and `.value_counts()` above, we can see that there are unexpectedly high number of song records with `track_popularity <= 1`. In order to ensure the datas are more normally distributed, we choose to remove those song records from our `full_dataset`."
                   ]
             },
             {
@@ -106,7 +109,7 @@
                   "metadata": {},
                   "outputs": [],
                   "source": [
-                        "# Remove records whose value of popularity is lower than or equal to 1\n",
+                        "# Remove records whose value of track_popularity is lower than or equal to 1\n",
                         "full_dataset = full_dataset[full_dataset['track_popularity'] > 1]\n",
                         "popularity = full_dataset[\"track_popularity\"]\n",
                         "\n",
@@ -125,9 +128,9 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "From the calculated skewness and plots above, we can clearly see that **`track_popularity` is similar to a normal distribution** if we ignore the clustering phenomenon at the low end.\n",
+                        "From the calculated skewness and plots above, we can clearly see that **`track_popularity` is similar to a normal distribution** if we discard the clustering phenomenon at the lower spectrum.\n",
                         "\n",
-                        "Thus, we can divide `track_popularity` into **6 levels** -- `very_low`, `low`, `somewhat_low`, `somewhat_high`, `high`, and `very_high` -- by mean and standard deviation."
+                        "Thus, we can then divide `track_popularity` into **6 levels** -- `very_low`, `low`, `somewhat_low`, `somewhat_high`, `high`, and `very_high` -- using mean and standard deviation as the parameters to gauge."
                   ]
             },
             {
@@ -153,9 +156,23 @@
                         "# Check the distribution of popularity levels\n",
                         "popularity_level = pd.DataFrame(full_dataset[\"popularity_level\"].value_counts(sort=False), columns=[\"count\"])\n",
                         "popularity_level[\"density\"] = popularity_level[\"count\"] / len(full_dataset)\n",
-                        "popularity_level\n",
-                        "\n",
-                        "# Save the cleaned dataset to a new CSV file named clean_dataset.csv\n",
+                        "popularity_level"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "We then save the cleaned dataset to a new CSV file named clean_dataset.csv"
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "#Save the extracted and cleaned dataset into a separate file named clean_dataset.csv\n",
                         "full_dataset.to_csv('datasets/cleaned_dataset.csv', index=False)"
                   ]
             },
@@ -170,7 +187,7 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "Currently the sample size is over 30k, and we choose to reduce it to 5k by random sampling."
+                        "The current sample size is over 30k, and we choose to reduce it to 5k by random sampling method and save the randomized dataset to a new CSV file named random_sampled_dataset.csv"
                   ]
             },
             {
@@ -189,7 +206,7 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "## Perform EDA on the reduced sample"
+                        "## 4. EDA and Visualisation analysis on random_sampled.csv"
                   ]
             },
             {
