--- a/project.ipynb
+++ b/project.ipynb
@@ -210,6 +210,20 @@
                   ]
             },
             {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "Out of all variables in the random_sampled.csv file, we have found several numeric as well as categorical variables for analysis"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "We first examine the numeric variables and their relationships with popularity_level"
+                  ]
+            },
+            {
                   "cell_type": "code",
                   "execution_count": null,
                   "metadata": {},
@@ -218,8 +232,26 @@
                         "popularity_level = pd.DataFrame(sampled_dataset[\"popularity_level\"])\n",
                         "print(popularity_level.describe())\n",
                         "print(popularity_level.value_counts())\n",
+                        "popularity_level.head()\n",
                         "\n",
-                        "sb.catplot(y=\"popularity_level\", data=popularity_level, kind=\"count\", height=4, aspect=3)"
+                        "track_popularity = pd.DataFrame(sampled_dataset[\"track_popularity\"])\n",
+                        "\n",
+                        "danceability = pd.DataFrame(sampled_dataset[\"danceability\"])\n",
+                        "print(danceability.describe())\n",
+                        "print(danceability.value_counts())\n",
+                        "danceability.head()\n",
+                        "\n",
+                        "energy = pd.DataFrame(sampled_dataset[\"energy\"])\n",
+                        "speechiness = pd.DataFrame(sampled_dataset[\"speechiness\"])\n",
+                        "acousticness = pd.DataFrame(sampled_dataset[\"acousticness\"])\n",
+                        "instrumentalness = pd.DataFrame(sampled_dataset[\"instrumentalness\"])\n",
+                        "liveness = pd.DataFrame(sampled_dataset[\"liveness\"])\n",
+                        "valence = pd.DataFrame(sampled_dataset[\"valence\"])\n",
+                        "tempo = pd.DataFrame(sampled_dataset[\"tempo\"])\n",
+                        "\n",
+                        "jointDF = pd.concat([track_popularity, danceability, energy, speechiness, acousticness, instrumentalness, liveness, valence, tempo])\n",
+                        "\n",
+                        "jointDF.corr()\n"
                   ]
             }
       ],
