--- a/project.ipynb
+++ b/project.ipynb
@@ -220,7 +220,7 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "We first examine the numeric variables and their relationships with popularity_level"
+                        "We first examine the numeric variables and their relationships with track_popularity"
                   ]
             },
             {
@@ -229,29 +229,134 @@
                   "metadata": {},
                   "outputs": [],
                   "source": [
-                        "popularity_level = pd.DataFrame(sampled_dataset[\"popularity_level\"])\n",
-                        "print(popularity_level.describe())\n",
-                        "print(popularity_level.value_counts())\n",
-                        "popularity_level.head()\n",
+                        "numeric_columns = [\"track_popularity\", \"danceability\", \"energy\", \"speechiness\", \"instrumentalness\", \"liveness\", \"valence\", \"tempo\", \"duration_ms\"]\n",
                         "\n",
-                        "track_popularity = pd.DataFrame(sampled_dataset[\"track_popularity\"])\n",
+                        "print(sampled_dataset[numeric_columns].corr())\n",
+                        "sb.heatmap(sampled_dataset[numeric_columns].corr(), vmin = -1, vmax = 1, annot = True, fmt=\".2f\")\n",
                         "\n",
-                        "danceability = pd.DataFrame(sampled_dataset[\"danceability\"])\n",
-                        "print(danceability.describe())\n",
-                        "print(danceability.value_counts())\n",
-                        "danceability.head()\n",
+                        "# f, axes = plt.subplots(3, 1, figsize=(24, 24), sharex=True)\n",
+                        "# sb.boxplot(data = sampled_dataset[numeric_columns].apply(min_max_normalize), orient = \"h\", ax=axes[0])\n",
+                        "# sb.histplot(data = sampled_dataset[numeric_columns].apply(min_max_normalize), kde = True, ax=axes[1])\n",
+                        "# sb.violinplot(data = sampled_dataset[numeric_columns].apply(min_max_normalize), orient = \"h\", ax=axes[2])"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "From the heatmap, we find 4 variables with the highest correlations with variable track_popularity (Highest correlation is determined by the highest absolute values of different variables with track_popularity)\n",
+                        "The 4 variables are: instrumentalness (correlation with track_popularity = -0.16), energy (correlation with track_popularity = -0.12), duration_ms (correlation with track_popularity = -0.10), danceability (correlation with track_popularity = 0.07)"
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "def min_max_normalize(x):\n",
+                        "    return (x - x.min()) / (x.max() - x.min()) * 100\n",
                         "\n",
-                        "energy = pd.DataFrame(sampled_dataset[\"energy\"])\n",
-                        "speechiness = pd.DataFrame(sampled_dataset[\"speechiness\"])\n",
-                        "acousticness = pd.DataFrame(sampled_dataset[\"acousticness\"])\n",
-                        "instrumentalness = pd.DataFrame(sampled_dataset[\"instrumentalness\"])\n",
-                        "liveness = pd.DataFrame(sampled_dataset[\"liveness\"])\n",
-                        "valence = pd.DataFrame(sampled_dataset[\"valence\"])\n",
-                        "tempo = pd.DataFrame(sampled_dataset[\"tempo\"])\n",
+                        "numeric5_columns = [ \"track_popularity\",\"instrumentalness\", \"energy\", \"duration_ms\",\"danceability\"]\n",
+                        "print(sampled_dataset[numeric5_columns].corr())\n",
+                        "sb.heatmap(sampled_dataset[numeric5_columns].corr(), vmin = -1, vmax = 1, annot = True, fmt=\".2f\")\n",
                         "\n",
-                        "jointDF = pd.concat([track_popularity, danceability, energy, speechiness, acousticness, instrumentalness, liveness, valence, tempo])\n",
+                        "f, axes = plt.subplots(3, 1, figsize=(24, 36), sharex=True)\n",
+                        "sb.boxplot(data = sampled_dataset[numeric5_columns].apply(min_max_normalize), orient = \"h\", ax=axes[0])\n",
+                        "sb.histplot(data = sampled_dataset[numeric5_columns].apply(min_max_normalize), kde = True, ax=axes[1])\n",
+                        "sb.violinplot(data = sampled_dataset[numeric5_columns].apply(min_max_normalize), orient = \"h\", ax=axes[2])"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "From various plots shown above, we can easily see that the variable instrumentalness is not a good variable to be used for eda analysis as the graph is severely skewed.\n",
+                        "To further prove our point, we use .describe() functions to see the distribution of the variable"
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "print(sampled_dataset[[\"instrumentalness\"]].describe())\n",
+                        "print(sampled_dataset[[\"instrumentalness\"]].value_counts())"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "The result above shows that there is a total of 1914 counts out of 5000 that have the instrumentalness value of 0. As there is a serious clustering at the low end, we decide to not use this variable for EDA analysis with track_popularity."
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "def min_max_normalize(x):\n",
+                        "    return (x - x.min()) / (x.max() - x.min()) * 100\n",
                         "\n",
-                        "jointDF.corr()\n"
+                        "numeric4_columns = [ \"track_popularity\", \"energy\", \"duration_ms\", \"danceability\"]\n",
+                        "print(sampled_dataset[numeric4_columns].corr())\n",
+                        "sb.heatmap(sampled_dataset[numeric4_columns].corr(), vmin = -1, vmax = 1, annot = True, fmt=\".2f\")\n",
+                        "\n",
+                        "f, axes = plt.subplots(3, 1, figsize=(24, 36), sharex=True)\n",
+                        "sb.boxplot(data = sampled_dataset[numeric4_columns].apply(min_max_normalize), orient = \"h\", ax=axes[0])\n",
+                        "sb.histplot(data = sampled_dataset[numeric4_columns].apply(min_max_normalize), kde = True, ax=axes[1])\n",
+                        "sb.violinplot(data = sampled_dataset[numeric4_columns].apply(min_max_normalize), orient = \"h\", ax=axes[2])"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "We then examine the categorical variables and their relationships with track_popularity."
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "#Import necessary libraries to encode categorical variables in the form of texts into categorical variables in the form of numericals\n",
+                        "from sklearn.tree import DecisionTreeClassifier\n",
+                        "from sklearn.preprocessing import LabelEncoder\n",
+                        "\n",
+                        "# categorical_columns_alreadyin_num = [\"mode\", \"key\"]\n",
+                        "categorical_columns_notin_num = [\"popularity_level\", \"playlist_genre\", \"playlist_subgenre\"]\n",
+                        "popularity_level_labels = []\n",
+                        "\n",
+                        "#encoding the columns that are categorical variables in the form of texts into numericals\n",
+                        "for i, col in enumerate(categorical_columns_notin_num):\n",
+                        "    label_encoder = LabelEncoder()\n",
+                        "    sampled_dataset[col+\"_encoded\"] = label_encoder.fit_transform(sampled_dataset[col])\n",
+                        "    # category_number_map.update({name: index for index, name in enumerate(list(label_encoder.classes_))})\n",
+                        "    if i > 0:\n",
+                        "        box_plot = sb.boxplot(data = sampled_dataset, x = col+\"_encoded\", y = 'popularity_level_encoded', orient = 'v')\n",
+                        "        box_plot.set_xticklabels(label_encoder.classes_)\n",
+                        "        box_plot.set_yticklabels(popularity_level_labels)\n",
+                        "        plt.show()\n",
+                        "    else:\n",
+                        "        print(col, label_encoder.classes_)\n",
+                        "        popularity_level_labels = list(label_encoder.classes_)\n"
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "box_plot = sb.boxplot(data = sampled_dataset, x = 'playlist_genre_encoded', y = 'popularity_level_encoded', orient = 'v')\n",
+                        "plt.show()\n",
+                        "sb.boxplot(data = encoded_categorical_DF, x = 'playlist_subgenre', y = 'popularity_level', orient = 'v')\n",
+                        "plt.show()"
                   ]
             }
       ],
