--- a/project.ipynb
+++ b/project.ipynb
@@ -331,6 +331,7 @@
                         "# categorical_columns_alreadyin_num = [\"mode\", \"key\"]\n",
                         "categorical_columns_notin_num = [\"popularity_level\", \"playlist_genre\", \"playlist_subgenre\"]\n",
                         "popularity_level_labels = []\n",
+                        "f, axes = plt.subplots(2, 1, figsize=(24, 12))\n",
                         "\n",
                         "#encoding the columns that are categorical variables in the form of texts into numericals\n",
                         "for i, col in enumerate(categorical_columns_notin_num):\n",
@@ -338,13 +339,12 @@
                         "    sampled_dataset[col+\"_encoded\"] = label_encoder.fit_transform(sampled_dataset[col])\n",
                         "    # category_number_map.update({name: index for index, name in enumerate(list(label_encoder.classes_))})\n",
                         "    if i > 0:\n",
-                        "        box_plot = sb.boxplot(data = sampled_dataset, x = col+\"_encoded\", y = 'popularity_level_encoded', orient = 'v')\n",
-                        "        box_plot.set_xticklabels(label_encoder.classes_)\n",
+                        "        box_plot = sb.boxplot(data = sampled_dataset, x = col+\"_encoded\", y = 'popularity_level_encoded', orient = 'v', ax=axes[i-1])\n",
+                        "        box_plot.set_xticklabels(list(label_encoder.classes_))\n",
                         "        box_plot.set_yticklabels(popularity_level_labels)\n",
-                        "        plt.show()\n",
                         "    else:\n",
                         "        print(col, label_encoder.classes_)\n",
-                        "        popularity_level_labels = list(label_encoder.classes_)\n"
+                        "        popularity_level_labels = [\"\"] + list(label_encoder.classes_)\n"
                   ]
             },
             {
@@ -376,7 +376,7 @@
                   "name": "python",
                   "nbconvert_exporter": "python",
                   "pygments_lexer": "ipython3",
-                  "version": "3.11.5"
+                  "version": "3.11.6"
             }
       },
       "nbformat": 4,
