add categorical eda

--- a/project.ipynb
+++ b/project.ipynb
@@ -229,10 +229,15 @@
                   "metadata": {},
                   "outputs": [],
                   "source": [
-                        "numeric_columns = [\"track_popularity\", \"danceability\", \"energy\", \"speechiness\", \"instrumentalness\", \"liveness\", \"valence\", \"tempo\", \"duration_ms\"]\n",
+                        "numeric_columns = [\"danceability\", \"energy\", \"speechiness\", \"instrumentalness\", \"liveness\", \"valence\", \"tempo\", \"duration_ms\"]\n",
                         "\n",
-                        "print(sampled_dataset[numeric_columns].corr())\n",
-                        "sb.heatmap(sampled_dataset[numeric_columns].corr(), vmin = -1, vmax = 1, annot = True, fmt=\".2f\")\n",
+                        "f = plt.figure(figsize=(16, 8))\n",
+                        "for col in numeric_columns:\n",
+                        "    sb.stripplot(x = col, y = 'popularity_level', data = sampled_dataset)\n",
+                        "    plt.show()\n",
+                        "\n",
+                        "# print(sampled_dataset[numeric_columns].corr())\n",
+                        "# sb.heatmap(sampled_dataset[numeric_columns].corr(), vmin = -1, vmax = 1, annot = True, fmt=\".2f\")\n",
                         "\n",
                         "# f, axes = plt.subplots(3, 1, figsize=(24, 24), sharex=True)\n",
                         "# sb.boxplot(data = sampled_dataset[numeric_columns].apply(min_max_normalize), orient = \"h\", ax=axes[0])\n",
@@ -315,7 +320,7 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "We then examine the categorical variables and their relationships with track_popularity."
+                        "We then examine the categorical variables and their relationships with popularity_level."
                   ]
             },
             {
@@ -324,27 +329,9 @@
                   "metadata": {},
                   "outputs": [],
                   "source": [
-                        "#Import necessary libraries to encode categorical variables in the form of texts into categorical variables in the form of numericals\n",
-                        "from sklearn.tree import DecisionTreeClassifier\n",
-                        "from sklearn.preprocessing import LabelEncoder\n",
-                        "\n",
-                        "# categorical_columns_alreadyin_num = [\"mode\", \"key\"]\n",
-                        "categorical_columns_notin_num = [\"popularity_level\", \"playlist_genre\", \"playlist_subgenre\"]\n",
-                        "popularity_level_labels = []\n",
-                        "f, axes = plt.subplots(2, 1, figsize=(24, 12))\n",
-                        "\n",
-                        "#encoding the columns that are categorical variables in the form of texts into numericals\n",
-                        "for i, col in enumerate(categorical_columns_notin_num):\n",
-                        "    label_encoder = LabelEncoder()\n",
-                        "    sampled_dataset[col+\"_encoded\"] = label_encoder.fit_transform(sampled_dataset[col])\n",
-                        "    # category_number_map.update({name: index for index, name in enumerate(list(label_encoder.classes_))})\n",
-                        "    if i > 0:\n",
-                        "        box_plot = sb.boxplot(data = sampled_dataset, x = col+\"_encoded\", y = 'popularity_level_encoded', orient = 'v', ax=axes[i-1])\n",
-                        "        box_plot.set_xticklabels(list(label_encoder.classes_))\n",
-                        "        box_plot.set_yticklabels(popularity_level_labels)\n",
-                        "    else:\n",
-                        "        print(col, label_encoder.classes_)\n",
-                        "        popularity_level_labels = [\"\"] + list(label_encoder.classes_)\n"
+                        "categorical_columns = [\"playlist_genre\", \"playlist_subgenre\", \"mode\", \"key\"]\n",
+                        "sampled_dataset[categorical_columns] = sampled_dataset[categorical_columns].astype('category')\n",
+                        "sampled_dataset[categorical_columns].describe()"
                   ]
             },
             {
@@ -353,10 +340,46 @@
                   "metadata": {},
                   "outputs": [],
                   "source": [
-                        "box_plot = sb.boxplot(data = sampled_dataset, x = 'playlist_genre_encoded', y = 'popularity_level_encoded', orient = 'v')\n",
-                        "plt.show()\n",
-                        "sb.boxplot(data = encoded_categorical_DF, x = 'playlist_subgenre', y = 'popularity_level', orient = 'v')\n",
-                        "plt.show()"
+                        "# playlist_genre vs popularity_level\n",
+                        "f = plt.figure(figsize=(16, 8))\n",
+                        "sb.heatmap(sampled_dataset.groupby(['popularity_level', 'playlist_genre']).size().unstack(),\n",
+                        "            linewidths=1, annot = True, fmt = 'g', annot_kws={\"size\": 18}, cmap=\"BuGn\")"
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "# playlist_subgenre vs popularity_level\n",
+                        "f = plt.figure(figsize=(24, 8))\n",
+                        "sb.heatmap(sampled_dataset.groupby(['popularity_level', 'playlist_subgenre']).size().unstack(),\n",
+                        "            linewidths=1, annot = True, fmt = 'g', annot_kws={\"size\": 18}, cmap=\"BuGn\")"
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "# mode vs popularity_level\n",
+                        "f = plt.figure(figsize=(4, 8))\n",
+                        "sb.heatmap(sampled_dataset.groupby(['popularity_level', 'mode']).size().unstack(),\n",
+                        "            linewidths=1, annot = True, fmt = 'g', annot_kws={\"size\": 18}, cmap=\"BuGn\")"
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "# key vs popularity_level\n",
+                        "f = plt.figure(figsize=(24, 8))\n",
+                        "sb.heatmap(sampled_dataset.groupby(['popularity_level', 'key']).size().unstack(),\n",
+                        "            linewidths=1, annot = True, fmt = 'g', annot_kws={\"size\": 18}, cmap=\"BuGn\")"
                   ]
             }
       ],
