--- a/project.ipynb
+++ b/project.ipynb
@@ -213,7 +213,14 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "Out of all variables in the random_sampled.csv file, we have found several numeric as well as categorical variables for analysis"
+                        "### Out of all variables in the random_sampled.csv file, we have found several numeric as well as categorical variables for analysis"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "### Analysis on numeric variables"
                   ]
             },
             {
@@ -315,6 +322,13 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
+                        "### Analysis on categorical variables"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
                         "We then examine the categorical variables and their relationships with track_popularity."
                   ]
             },
@@ -346,18 +360,6 @@
                         "        print(col, label_encoder.classes_)\n",
                         "        popularity_level_labels = [\"\"] + list(label_encoder.classes_)\n"
                   ]
-            },
-            {
-                  "cell_type": "code",
-                  "execution_count": null,
-                  "metadata": {},
-                  "outputs": [],
-                  "source": [
-                        "box_plot = sb.boxplot(data = sampled_dataset, x = 'playlist_genre_encoded', y = 'popularity_level_encoded', orient = 'v')\n",
-                        "plt.show()\n",
-                        "sb.boxplot(data = encoded_categorical_DF, x = 'playlist_subgenre', y = 'popularity_level', orient = 'v')\n",
-                        "plt.show()"
-                  ]
             }
       ],
       "metadata": {
@@ -376,7 +378,7 @@
                   "name": "python",
                   "nbconvert_exporter": "python",
                   "pygments_lexer": "ipython3",
-                  "version": "3.11.6"
+                  "version": "3.11.5"
             }
       },
       "nbformat": 4,
