reverse changes to numeric eda

--- a/project.ipynb
+++ b/project.ipynb
@@ -227,7 +227,7 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "We first examine the numeric variables and their relationships with track_popularity"
+                        "We first examine the numeric variables and their relationships with popularity_level"
                   ]
             },
             {
@@ -236,20 +236,15 @@
                   "metadata": {},
                   "outputs": [],
                   "source": [
-                        "numeric_columns = [\"danceability\", \"energy\", \"speechiness\", \"instrumentalness\", \"liveness\", \"valence\", \"tempo\", \"duration_ms\"]\n",
+                        "numeric_columns = [\"track_popularity\", \"danceability\", \"energy\", \"speechiness\", \"instrumentalness\", \"liveness\", \"valence\", \"tempo\", \"duration_ms\"]\n",
                         "\n",
-                        "f = plt.figure(figsize=(16, 8))\n",
-                        "for col in numeric_columns:\n",
-                        "    sb.stripplot(x = col, y = 'popularity_level', data = sampled_dataset)\n",
-                        "    plt.show()\n",
+                        "print(sampled_dataset[numeric_columns].corr())\n",
+                        "sb.heatmap(sampled_dataset[numeric_columns].corr(), vmin = -1, vmax = 1, annot = True, fmt=\".2f\")\n",
                         "\n",
-                        "# print(sampled_dataset[numeric_columns].corr())\n",
-                        "# sb.heatmap(sampled_dataset[numeric_columns].corr(), vmin = -1, vmax = 1, annot = True, fmt=\".2f\")\n",
-                        "\n",
-                        "# f, axes = plt.subplots(3, 1, figsize=(24, 24), sharex=True)\n",
-                        "# sb.boxplot(data = sampled_dataset[numeric_columns].apply(min_max_normalize), orient = \"h\", ax=axes[0])\n",
-                        "# sb.histplot(data = sampled_dataset[numeric_columns].apply(min_max_normalize), kde = True, ax=axes[1])\n",
-                        "# sb.violinplot(data = sampled_dataset[numeric_columns].apply(min_max_normalize), orient = \"h\", ax=axes[2])"
+                        "f, axes = plt.subplots(3, 1, figsize=(24, 24), sharex=True)\n",
+                        "sb.boxplot(data = sampled_dataset[numeric_columns].apply(min_max_normalize), orient = \"h\", ax=axes[0])\n",
+                        "sb.histplot(data = sampled_dataset[numeric_columns].apply(min_max_normalize), kde = True, ax=axes[1])\n",
+                        "sb.violinplot(data = sampled_dataset[numeric_columns].apply(min_max_normalize), orient = \"h\", ax=axes[2])"
                   ]
             },
             {
@@ -269,7 +264,7 @@
                         "def min_max_normalize(x):\n",
                         "    return (x - x.min()) / (x.max() - x.min()) * 100\n",
                         "\n",
-                        "numeric5_columns = [ \"track_popularity\",\"instrumentalness\", \"energy\", \"duration_ms\",\"danceability\"]\n",
+                        "numeric5_columns = [\"track_popularity\", \"instrumentalness\", \"energy\", \"duration_ms\",\"danceability\"]\n",
                         "print(sampled_dataset[numeric5_columns].corr())\n",
                         "sb.heatmap(sampled_dataset[numeric5_columns].corr(), vmin = -1, vmax = 1, annot = True, fmt=\".2f\")\n",
                         "\n",
