--- a/project.ipynb
+++ b/project.ipynb
@@ -220,14 +220,14 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "### Analysis on numeric variables"
+                        "### EDA and Visualisation analysis on numeric variables"
                   ]
             },
             {
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "We first examine the numeric variables and their relationships with popularity_level"
+                        "We first examine the numeric variables and their relationships with track_popularity"
                   ]
             },
             {
@@ -322,14 +322,14 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "### Analysis on categorical variables"
+                        "### EDA and Visualisation analysis on categorical variables"
                   ]
             },
             {
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "We then examine the categorical variables and their relationships with track_popularity."
+                        "We then examine the categorical variables and their relationships with popularity_level."
                   ]
             },
             {
@@ -389,6 +389,20 @@
                         "f = plt.figure(figsize=(24, 8))\n",
                         "sb.heatmap(sampled_dataset.groupby(['popularity_level', 'key']).size().unstack(),\n",
                         "            linewidths=1, annot = True, fmt = 'g', annot_kws={\"size\": 18}, cmap=\"BuGn\")"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "From the diagrams above, we can see that out of all 4 categorical values listed above, 2 of them (mode and playlist_subgenre) display some trends that can be used as predictors. Hence, we will use these two categorical variables and fit them into the models subsequently."
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "## 5. Creating Model 1 for prediction of popularity_level"
                   ]
             }
       ],
