--- a/project.ipynb
+++ b/project.ipynb
@@ -236,6 +236,9 @@
                   "metadata": {},
                   "outputs": [],
                   "source": [
+                        "def min_max_normalize(x):\n",
+                        "    return (x - x.min()) / (x.max() - x.min()) * 100\n",
+                        "\n",
                         "numeric_columns = [\"track_popularity\", \"danceability\", \"energy\", \"speechiness\", \"instrumentalness\", \"liveness\", \"valence\", \"tempo\", \"duration_ms\"]\n",
                         "\n",
                         "print(sampled_dataset[numeric_columns].corr())\n",
