--- a/project.ipynb
+++ b/project.ipynb
@@ -405,7 +405,7 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "## 5. Creating Model 1 for prediction of popularity_level"
+                        "## 5. Fitting Model 1 for prediction of popularity_level"
                   ]
             }
       ],
@@ -425,7 +425,7 @@
                   "name": "python",
                   "nbconvert_exporter": "python",
                   "pygments_lexer": "ipython3",
-                  "version": "3.11.5"
+                  "version": "3.11.6"
             }
       },
       "nbformat": 4,
